language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_ignore_within_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn main(a, b, z) {\n    Nil\n}\n"
---

fn main(a, b, |z) {
    Nil
}


----- Completion content -----
