language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_ignored.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let a = 1\n  let _b = 2\n\n}\n"
---

fn wibble() {
  let a = 1
  let _b = 2
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
a
  kind:   Variable
  detail: Int
  sort:   3_a
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:0-4:0]: "a"
wibble
  kind:   Function
  detail: fn() -> Int
  sort:   3_wibble
  desc:   app
  edits:
    [4:0-4:0]: "wibble"
