language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_nested_anonymous_function.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int) {\n    let wabble = 1\n    let add_two = fn(wobble: Int) { wobble + 2 }\n    wibble + add_two(1)\n  }\n  add_one(1)\n}\n"
---

pub fn main() {
  let add_one = fn(wibble: Int) {
    let wabble = 1
    let add_two = fn(wobble: Int) { wobble| + 2 }
    wibble + add_two(1)
  }
  add_one(1)
}


----- Completion content -----
main
  kind:   Function
  detail: fn() -> Int
  sort:   03_main
  desc:   app
  edits:
    [4:36-4:42]: "main"
wabble
  kind:   Variable
  detail: Int
  sort:   03_wabble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:36-4:42]: "wabble"
wibble
  kind:   Variable
  detail: Int
  sort:   03_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:36-4:42]: "wibble"
wobble
  kind:   Variable
  detail: Int
  sort:   03_wobble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:36-4:42]: "wobble"
