language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_pipe.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int) { wibble + 1 }\n  let wobble = 1\n  wobble |> add_one\n}\n"
---

pub fn main() {
  let add_one = fn(wibble: Int) { wibble + 1 }
  let wobble = 1
  wobble |> add_one|
}


----- Completion content -----
add_one
  kind:   Variable
  detail: fn(Int) -> Int
  sort:   03_add_one
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:12-4:19]: "add_one"
main
  kind:   Function
  detail: fn() -> Int
  sort:   3_main
  desc:   app
  edits:
    [4:12-4:19]: "main"
wobble
  kind:   Variable
  detail: Int
  sort:   3_wobble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [4:12-4:19]: "wobble"
