language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_pipe_with_args.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub fn main() {\n  let add_one = fn(wibble: Int, wobble: Int) { wibble + wobble }\n  let wobble = 1\n  let wibble = 2\n  wobble |> add_one(1, wibble)\n}\n"
---

pub fn main() {
  let add_one = fn(wibble: Int, wobble: Int) { wibble + wobble }
  let wobble = 1
  let wibble = 2
  wobble |> add_one(1, wibble|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
add_one
  kind:   Variable
  detail: fn(Int, Int) -> Int
  sort:   3_add_one
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:23-5:29]: "add_one"
main
  kind:   Function
  detail: fn() -> a
  sort:   3_main
  desc:   app
  edits:
    [5:23-5:29]: "main"
wibble
  kind:   Variable
  detail: Int
  sort:   3_wibble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:23-5:29]: "wibble"
wobble
  kind:   Variable
  detail: Int
  sort:   3_wobble
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [5:23-5:29]: "wobble"
