language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_string.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let assert \"a\" <> j = \"ab\"\n\n}\n"
---

fn wibble() {
  let assert "a" <> j = "ab"
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
j
  kind:   Variable
  detail: String
  sort:   3_j
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "j"
wibble
  kind:   Function
  detail: fn() -> String
  sort:   3_wibble
  desc:   app
  edits:
    [3:0-3:0]: "wibble"
