language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_variable_tuple.snap
---
source: language-server/src/tests/completion.rs
expression: "\nfn wibble() {\n  let assert #([d, e] as f, g) = #([0, 1], 2)\n\n}\n"
---

fn wibble() {
  let assert #([d, e] as f, g) = #([0, 1], 2)
|
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
d
  kind:   Variable
  detail: Int
  sort:   3_d
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "d"
e
  kind:   Variable
  detail: Int
  sort:   3_e
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "e"
f
  kind:   Variable
  detail: List(Int)
  sort:   3_f
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "f"
g
  kind:   Variable
  detail: Int
  sort:   3_g
  desc:   app
  docs:   "A locally defined variable."
  edits:
    [3:0-3:0]: "g"
wibble
  kind:   Function
  detail: fn() -> #(List(Int), Int)
  sort:   3_wibble
  desc:   app
  edits:
    [3:0-3:0]: "wibble"
