language-server/src/tests/snapshots/gleam_language_server__tests__completion__no_completions_for_imported_internal_record_fields.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport dep\n\nfn fun(wibble: dep.Wibble) {\n  wibble.\n  //     ^ We should see no completions here!\n}\n"
---
import dep

fn fun(wibble: dep.Wibble) {
  wibble.|
  //     ^ We should see no completions here!
}


----- Completion content -----
